--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p><a href="baif1/hinh3.html">Hinh 3</a></p>
     <p><a href="baif1/hinh4.html">Hinh 4</a></p>
     <p><a href="baif1/hinh5.html">Hinh 5</a></p>
-    <p><a href="C:\Users\HS01\Desktop\12A14-Phạm Huỳnh Cẩm Tú\baif1\hinh6.html">Hinh 6</a></p>
+    <p><a href="baif1/hinh6.html">Hinh 6</a></p>
     <p><a href="C:\Users\HS01\Desktop\12A14-Phạm Huỳnh Cẩm Tú\baif1\hinh7.html">Hinh 7</a></p>
     <h2>Bai F3</h2>
 </html>
