--- a/baif3.html/hinh1.html
+++ b/baif3.html/hinh1.html
@@ -1,4 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
 <h1>Lịch sinh hoạt hằng tuần</h1>
+</head>
+<body>
     <table border="1">
         <tr>
             <th></th>
@@ -19,3 +24,5 @@
             <td>CLB Tin học</td>
         </tr>
     </table>
+</body>
+</html>
