--- a/baif3.html/hinh2.html
+++ b/baif3.html/hinh2.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<head>
 <table border="1" width="100%">
     <tr height="80" bgcolor="#66ccff">
         <td colspan="2">Tiêu đề trang</td>
@@ -10,3 +12,4 @@
             <td colspan="2" bgcolor="#66ccff">Phần cuối trang</td>
     </tr>
 </table>
+</head>
