--- a/index.html
+++ b/index.html
@@ -12,4 +12,18 @@
     <p><a href="baif1/hinh6.html">Hinh 6</a></p>
     <p><a href="baif1/hinh7.html">Hinh 7</a></p>
     <h2>Bai F2</h2>
-</html>
+    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <h2>Bài F3</h2>
+    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+
