--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p><a href="baif1/hinh6.html">Hinh 6</a></p>
     <p><a href="baif1/hinh7.html">Hinh 7</a></p>
     <h2>Bai F2</h2>
-    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baitapf2/hinh2.html">Hinh 2</a></p>
     <p><a href="baif1/hinh3.html">Hinh 3</a></p>
     <p><a href="baif1/hinh3.html">Hinh 3</a></p>
     <p><a href="baif1/hinh3.html">Hinh 3</a></p>
