--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>Bai F2</h2>
     <p><a href="baitapf2/hinh2.html">Hinh 2</a></p>
     <p><a href="baitapf2/hinh4.html">Hinh 4</a></p>
-    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baitapf2/hinh5.html">Hinh 5</a></p>
     <p><a href="baif1/hinh3.html">Hinh 3</a></p>
     <p><a href="baif1/hinh3.html">Hinh 3</a></p>
     <p><a href="baif1/hinh3.html">Hinh 3</a></p>
