--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p><a href="baif1/hinh3.html">Hinh 3</a></p>
     <p><a href="baif1/hinh3.html">Hinh 3</a></p>
     <h2>Bài F3</h2>
-    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baif3.html/hinh1.html">Hinh 1</a></p>
     <p><a href="baif1/hinh3.html">Hinh 3</a></p>
     <p><a href="baif1/hinh3.html">Hinh 3</a></p>
     <p><a href="baif1/hinh3.html">Hinh 3</a></p>
