--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <p><a href="baif3.html/hinh1.html">Hinh 1</a></p>
     <p><a href="baif3.html/hinh2.html">Hinh 2</a></p>
     <p><a href="baif3.html/hinh3.html">Hinh 3</a></p>
-    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    <p><a href="baif3.html/hinh4.html">Hinh 4</a></p>
     <p><a href="baif1/hinh3.html">Hinh 3</a></p>
 
