--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
+<!DOCTYPE html>
 <html>
-<head>
+    <head>
             <meta charset="utf-8">
             <title>Bai 0</title>
-</head>
-    <h1> Lập trình HTML học kì 2 cả năm</h1>
-    <p>Hoten:Phạm Huỳnh Cẩm Tú</p>
-    <h2>Bài F1</h2>
-    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
-    <p><a href="baif1/hinh4.html">Hinh 4</a></p>
-    <p><a href="baif1/hinh5.html">Hinh 5</a></p>
-    <p><a href="baif1/hinh6.html">Hinh 6</a></p>
-    <p><a href="baif1/hinh7.html">Hinh 7</a></p>
-    <h2>Bai F2</h2>
-    <p><a href="baitapf2/hinh2.html">Hinh 2</a></p>
-    <p><a href="baitapf2/hinh4.html">Hinh 4</a></p>
-    <p><a href="baitapf2/hinh5.html">Hinh 5</a></p>
-    <p><a href="baitapf2/hinh6.html">Hinh 6</a></p>
-    <p><a href="baitapf2/hinh7.html">Hinh 7</a></p>
-    <h2>Bài F3</h2>
-    <p><a href="baif3.html/hinh1.html">Hinh 1</a></p>
-    <p><a href="baif3.html/hinh2.html">Hinh 2</a></p>
-    <p><a href="baif3.html/hinh3.html">Hinh 3</a></p>
-    <p><a href="baif3.html/hinh4.html">Hinh 4</a></p>
-    <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+    </head>
+    <body>
+        <h1> Lập trình HTML học kì 2 cả năm</h1>
+        <p>Hoten:Phạm Huỳnh Cẩm Tú</p>
+        <h2>Bài F1</h2>
+            <p><a href="baif1/hinh3.html">Hinh 3</a></p>
+            <p><a href="baif1/hinh4.html">Hinh 4</a></p>
+            <p><a href="baif1/hinh5.html">Hinh 5</a></p>
+            <p><a href="baif1/hinh6.html">Hinh 6</a></p>
+            <p><a href="baif1/hinh7.html">Hinh 7</a></p>
+        <h2>Bai F2</h2>
+            <p><a href="baitapf2/hinh2.html">Hinh 2</a></p>
+            <p><a href="baitapf2/hinh4.html">Hinh 4</a></p>
+            <p><a href="baitapf2/hinh5.html">Hinh 5</a></p>
+            <p><a href="baitapf2/hinh6.html">Hinh 6</a></p>
+            <p><a href="baitapf2/hinh7.html">Hinh 7</a></p>
+        <h2>Bài F3</h2>
+            <p><a href="baif3.html/hinh1.html">Hinh 1</a></p>
+            <p><a href="baif3.html/hinh2.html">Hinh 2</a></p>
+            <p><a href="baif3.html/hinh3.html">Hinh 3</a></p>
+            <p><a href="baif3.html/hinh4.html">Hinh 4</a></p>
+    </body>
+</html>
+    
 
